k8n/base/sonar/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonar
  template:
    metadata:
      labels:
        app: sonar
    spec:
      containers:
        - name: sonar
          resources:
            requests:
              memory: "1024Mi"
              cpu: "500m"
            limits:
              memory: "10240Mi"
              cpu: "4"
          image: sonarqube:latest
          ports:
            - containerPort: 9000
